# TencentOS-tiny

./: .gitignore  README.md
docs/: setup.linux.ubuntu.md  setup.mac.md
teleplate/TencentOS_tiny_EVB_G0-cmake/: CMakeLists.txt
teleplate/TencentOS_tiny_EVB_G0-cmake/toolchain/: stlink.cmake
template/TencentOS_tiny_EVB_G0-cmake/KEIL/mqtt_iot_explorer_tc_ch20_oled/demo/: mqtt_iot_explorer_tc_ch20_oled.c
template/tos_evb_g0_cmake/: CMakeLists.txt
template/tos_evb_g0_cmake/KEIL/mqtt_iot_explorer_tc_ch20_oled/demo/: mqtt_iot_explorer_tc_ch20_oled.c
template/tos_evb_g0_cmake/toolchain/: stm32-base.cmake
